--- a/projeto-integrador/src/main/resources/application.properties
+++ b/projeto-integrador/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url = jdbc:mysql://localhost:3306/spring?useUnicode=yes&characterEncoding=UTF-8
+spring.datasource.url = jdbc:mysql://localhost:3306/codejavadb?useUnicode=yes&characterEncoding=UTF-8
 spring.datasource.username=root
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
