--- a/projeto-integrador/bin/src/main/resources/application.properties
+++ b/projeto-integrador/bin/src/main/resources/application.properties
@@ -1,6 +1,5 @@
-spring.datasource.url = jdbc:mysql://localhost:3300/spring_db?serverTimezone=America/Sao_Paulo&useSSL=false
+spring.datasource.url = jdbc:mysql://localhost:3306/codejavadb?useUnicode=yes&characterEncoding=UTF-8
 spring.datasource.username=root
-]spring.datasource.password=123456
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.hibernate.ddl-auto=update
