--- a/projeto-integrador/src/main/resources/env/mail.properties
+++ b/projeto-integrador/src/main/resources/env/mail.properties
@@ -1,4 +1,4 @@
 mail.smtp.host=smtp.gmail.com
 mail.smtp.port=587
-mail.smtp.username=shooterbrak@gmail.com
-mail.smtp.password=QGj&R!asPg3vr9
+mail.smtp.username=
+mail.smtp.password=
